[project]
name = "vest-build"
version = "0.0.3"
description = "A Python-based build system for bespoke use"
authors = [{ name = "ascpixi", email = "ascpixi@proton.me" }]
readme = "README.md"
requires-python = ">=3.11"

keywords = [
    "build", "build-system", "build-tool", "buildsystem",
    "build-automation", "automation", "task-runner", "task",
    "make", "makefile", "cli", "compile", "artifact",
    "developer-tools", "toolchain",
]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Compilers",
    "Topic :: Utilities",
    "Typing :: Typed",
]

dependencies = [
    "packaging>=26.0",
    "rich>=15.0.0"
]

[project.urls]
Repository = "https://github.com/ascpixi/vest"

[project.scripts]
vest = "vest.__main__:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "vest"
